@@ -24,7 +24,7 @@ public:
 protected:
   //============Function for Wordseg=====================
   void CreateWordList (const Dict* dict);
-  void SwapLinkSep ();
+  void ReverseLinkSep ();
   virtual int CreateSentence () = 0;    //return idx of best sen
   int GetBestSen (int bestidx, short int* outSeps, int outSepsSz);
   unsigned short int copySepData (short int sourceIdxSen,
