@@ -1,5 +1,12 @@
 2017-11-21  Theppitak Karoonboonyanan <theppitak@gmail.com>
 
+	Rename AbsWordSeg::SwapLinkSep() to ReverseLinkSep().
+
+	* src/abswordseg.h, src/abswordseg.cpp:
+	  - Rename AbsWordSeg::SwapLinkSep() to ReverseLinkSep().
+
+2017-11-21  Theppitak Karoonboonyanan <theppitak@gmail.com>
+
 	Remove empty default c-tors.
 
 	* src/longwordseg.h, src/longwordseg.cpp:
